Fix syntax errors for java 17 compatibility and method signatures